the navbar slider and login page is done

--- a/src/index.html
+++ b/src/index.html
@@ -34,15 +34,15 @@
 
                     </ul>
                     <div class="login">
-                        <i class="fa-solid fa-user mt-1 d-none d-md-block"></i>
+                        <i class="fa-solid fa-user mt-1  "></i>
                         <div class="login-container ">
                             <a href="login.html" class="button">دخول / إنشاء حساب </a>
                         </div>
                     </div>
 
                     <div class="login-mobile">
-                        <i class="fa-solid fa-user mt-1 d-inline d-md-none"></i>
-                        <a href="login.html" class="d-md-none  d-inline">دخول / إنشاء حساب </a>
+                        <i class="fa-solid fa-user mt-1 "></i>
+                        <a href="login.html" class="">دخول / إنشاء حساب </a>
                     </div>
                 </div>
             </div>
