--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <header>
         <nav class="navbar navbar-expand-lg  " id="navbar">
-            <div class="container px-5">
+            <div class="container ">
                 <a class="navbar-brand" href="index.html">
                     <img src="./images/logo.png" id="logo" alt="logo">
                     <span>مدرسة علمني</span>
