--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<header>
+    <header>
         <nav class="navbar navbar-expand-lg  " id="navbar">
             <div class="container ">
                 <a class="navbar-brand" href="index.html">
@@ -47,45 +47,131 @@
                 </div>
             </div>
         </nav>
-</header>
+    </header>
 
-<section class="slider">
+    <section class="slider">
         <div class="container-fluid px-0">
             <div class="row g-0">
-                <div id="carouselExampleIndicators" class="carousel slide">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                <div class="col">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./images/slider1.jpeg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/slider2.jpeg" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/slider3.jpeg" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="prev">
+                            <span class="fa-solid fa-angles-right fa-2xl" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                            data-bs-slide="next">
+                            <span class="fa-solid fa-angles-left fa-2xl" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./images/slider1.jpeg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/slider2.jpeg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/slider3.jpeg" class="d-block w-100 " alt="...">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="fa-solid fa-angles-right fa-2xl" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        
-                        <span class="fa-solid fa-angles-left fa-2xl" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+
+
+    <section class="activites">
+
+        <div class="d-flex justify-content-center">
+            <p class=" welcom-text text-center pt-5 w-50">أهلًا بك في مدرسة علمني، أفضل مدرسة على مستوى
+                القطر متخصصة في تعليم
+                وتأهيل الطلاب بأفضل الطرق والنشاطات، إن كنت تبحث عن مدرسة مميزة لابنك لا تتردد بالتواصل معنا.
+            </p>
+        </div>
+
+        <div class="container mt-4">
+            <h3 class="text-center pt-3">النشاطات التي تقدمها المدرسة</h3>
+            <i class="fa-solid fa-angles-down d-flex justify-content-center pt-3"></i>
+            <div class="row ">
+                <!-- First Card -->
+                <div class="col-md-6">
+                    <!-- to make all card same hight >> d-flex align-items-stretch -->
+                    <div class="col d-flex align-items-stretch"> 
+                        <div class="card mt-4">
+                            <div class="card-body">
+                                <i class="fa-solid fa-book-open fa-2xl"></i>
+                                <h5 class="card-title text-center">نشاط الندوات والمحاضرات</h5>
+                                <p class="card-text">تعد الندوات والمحاضرات لوناً من ألوان الأنشطة الثقافية الهامة ،حيث
+                                    يتلقى الطلبة من خلالها المزيد من الثقافة والمعرفة من ذوي الخبرة والمختصين في مجال
+                                    معين
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Second Card -->
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="card mt-4">
+                        <div class="card-body">
+                            <i class="fa-solid fa-bus fa-2xl"></i>
+                            <h5 class="card-title text-center">الرحلات المدرسية </h5>
+                            <p class="card-text">الرحلات المدرسية جزء من المنهاج المدرسي له قيمته وأهميته التربوية
+                                فهو
+                                نشاط محبب لدى جميع الطلاب.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row ">
+                <!-- third Card -->
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="card mt-4">
+                        <div class="card-body">
+                            <i class="fa-solid fa-suitcase-medical fa-2xl"></i>
+                            <h5 class="card-title text-center"> النشاط الصحي </h5>
+                            <p class="card-text">النشاط الصحي هو ذلك المجال الذي يهيئ الفرص أمام الطلاب
+                                لتعديل
+                                السلوك
+                                والمفاهيم إلى أنماط السلوك الصحي وتوجيههم التوجيه السليم و بواسطة هذا النشاط
+                                يتحقق
+                                التواصل الجيد للوعي والسلوك الصحي داخل وخارج أسوار المدرسة.
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- fourth Card -->
+                <div class="col-md-6 d-flex align-items-stretch">
+                    <div class="card mt-4">
+                        <div class="card-body">
+                            <i class="fa-solid fa-medal fa-2xl"></i>
+                            <h5 class="card-title text-center">الأنشطة الرياضية </h5>
+                            <p class="card-text">الأنشطة الطلابية تلعب دوراً بارزاً وفعالاً في بناء شخصية الفرد
+                                من
+                                خلال
+                                تنمية قدراته ومواهبه الرياضية بالإضافة إلى تعديل وتغيير سلوكه بما يتناسب مع
+                                احتياجات
+                                المجتمع.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
 
 </body>
 
