--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg fixed-top " id="navbar">
-            <div class="container px-5">
+            <div class="container">
                 <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" id="logo" alt="logo">
                     <span>مدرسة علمني</span>
