almost done home page

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
     <section class="activites">
 
         <div class="d-flex justify-content-center">
-            <p class=" welcom-text text-center pt-5 w-50">أهلًا بك في مدرسة علمني، أفضل مدرسة على مستوى
+            <p class=" welcom-text text-center pt-5 w-50 ">أهلًا بك في مدرسة علمني، أفضل مدرسة على مستوى
                 القطر متخصصة في تعليم
                 وتأهيل الطلاب بأفضل الطرق والنشاطات، إن كنت تبحث عن مدرسة مميزة لابنك لا تتردد بالتواصل معنا.
             </p>
@@ -240,9 +240,9 @@
     </section>
 
     <section class="contact">
-        <section class="container-fluid p-5">
-            <h3 class="text-center mb-5">تواصل معنا</h3>
-            <div class="container">
+        <section class="container-fluid ">
+            <h3 class="text-center py-5">تواصل معنا</h3>
+            <div class="container ">
             <div class="row g-0">
                 <!-- Contact Information -->
                 <div class="col-12 col-md-3">
