--- a/src/login.html
+++ b/src/login.html
@@ -27,7 +27,7 @@
                             <a class="nav-link active" aria-current="page" href="ali.html">الطالب المتوفق علي</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="selim.html">الطالب المتفوق سليم</a>
+                            <a class="nav-link" href="hakan.html">الطالب المتفوق هاكان</a>
                         </li>
       
                     </ul>
