--- a/src/index.html
+++ b/src/index.html
@@ -273,7 +273,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section class="contact mt-5">
         <section class="container-fluid ">
             <h3 class="text-center py-5">تواصل معنا</h3>
             <div class="container ">
