--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
     </section>
 
     <section class="container my-5 students">
-        <h3 class="text-center pb-4">طلاب مدرسة علمني</h3>
+        <h3 class="text-center pb-2 pt-5">طلاب مدرسة علمني</h3>
         <div class="swiper mySwiper pt-4">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -235,7 +235,7 @@
         </div>
     </section>
 
-    <section class=" star text-center pt-5">
+    <section class=" star text-center pt-3">
         <div class="start-title justify-content-center">
             <i class="fa-solid fa-star d-inline"></i>
             <i class="fa-solid fa-star fa-lg"></i>
