frist page amost done done

--- a/src/login.html
+++ b/src/login.html
@@ -10,10 +10,10 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top " id="navbar">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
+            <div class="container ">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" id="logo" alt="logo">
+                    <img src="./images/logo.png" id="logo" alt="logo">
                     <span>مدرسة علمني</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -24,14 +24,28 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="ali.html">الطالب المتوفق علي</a>
+                            <a class="nav-link active" aria-current="page" href="firstgrade.html"> 
+                             المرتبة الأولى
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="hakan.html">الطالب المتفوق هاكان</a>
+                            <a class="nav-link" href="secondgrade.html">
+                                المرتبة الثانية
+                            </a>
                         </li>
-      
+
                     </ul>
-                    
+                    <div class="login">
+                        <i class="fa-solid fa-user mt-1  "></i>
+                        <div class="login-container ">
+                            <a href="login.html" class="button">دخول / إنشاء حساب </a>
+                        </div>
+                    </div>
+
+                    <div class="login-mobile">
+                        <i class="fa-solid fa-user mt-1 "></i>
+                        <a href="login.html" class="">دخول / إنشاء حساب </a>
+                    </div>
                 </div>
             </div>
         </nav>
